--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="_3">3</string>
     <string name="_1">1</string>
     <string name="Name">Name</string>
+    <string name="Chocolate">chocolate</string>
 </resources>
